<resources>
    <string name="app_name">CPSystemsApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Prepoznava registrskih tablic \nin beleženje.</string>
    <string name="already_registered">Already registered?</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="username">Username</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="car">Car</string>
    <string name="road">Road</string>
    <string name="communication">Communication</string>
    <string name="help">Help</string>
    <string name="title_activity_menu">ActivityMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="send">Send</string>
    <string name="road_conditions">Road conditions...</string>

    <string-array name="road_array">
        <item>Select road event...</item>
        <item>Road work</item>
        <item>Construction site</item>
        <item>Colision</item>
        <item>Hole</item>
        <item>Icy road</item>
        <item>Police</item>
        <item>Radar</item>
        <item>Danger</item>
    </string-array>
</resources>