<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_baseline_photo_camera_24"
            android:title="@string/camera" />
        <item
            android:id="@+id/nav_car"
            android:icon="@drawable/ic_baseline_drive_eta_24"
            android:title="@string/car" />
        <item
            android:id="@+id/nav_road"
            android:icon="@drawable/ic_baseline_edit_road_24"
            android:title="@string/road" />
    </group>
    <item android:title="@string/help">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_communication"
                android:icon="@drawable/ic_baseline_contact_support_24"
                android:title="@string/communication" />
        </menu>
    </item>
</menu>